# zynq-fir-decimation-ip

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  test_uart.py  todo.md
asic/nitro/: README.md  error_records.md  template_nitro.tcl
asic/oasys/: README.md  clk.sdc  export.tcl  help.md  v1_config.tcl  v2_config.tcl
docs/: AXI-stream.md  build_artifacts.md  fixed_model_spec.md  getting_started.md  ideal_model_spec.md  input_signal_spec.md  project_pipeline.md  repository_structure.md  study_roadmap.md  summary_design_decisions.md  데모 시나리오.md  팀명_결과보고서.hwp  하드웨어 파이프라인.md
docs/log/: 01_spec_and_kaiser.md  02_spec.md  03_coeff_qformat.md  04_input_qformat.md  05_bringup_input_signal.md  06_ideal_vs_fixed_compare_n5.md  06_ideal_vs_fixed_compare_n5_metrics.csv  07_coeff_stopband_spec_check.md  08_context_and_workflow_sync.md  09_bringup_rtl_decisions.md  09_rtl_bringup_vector_export.md  12_project_direction_change.md  (+53 more)
model/: config.py  q1_15.py
release/: README.md
sim/: Makefile  downsample_only_ideal.py
sw/: bringup_demo.c  cpu_benchmark.py  fir_decimator_capture.py  fir_decimator_demo.c  fir_decimator_demo.py  fir_decimator_fft_viewer.py  fir_decimator_metrics.py  fir_decimator_report.py
vitis/: build_fir_decimator_demo.py  build_fir_decimator_demo.tcl  download_and_run.py  download_and_run.tcl  gen_mwr_tcl.py  rebuild_boot_image.sh
vivado/: README.md  bd_fir_dma.tcl  bd_fir_dma_axis_debug.tcl  build_bd_fir_dma.tcl  build_bd_fir_dma_axis_debug.tcl  build_bd_fir_dma_smoke.tcl  build_fir_transposed_n43.tcl  sweep_loop_runbook.md
(+239 files in other folders)
