[project]
name = "zynq-fir-decimation-ip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "pytest>=9.0.2",
    "scipy>=1.17.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["sim/python/test"]
